--- a/netBS/core/SecureBundle/Resources/views/user/list_users.html.twig
+++ b/netBS/core/SecureBundle/Resources/views/user/list_users.html.twig
@@ -16,7 +16,7 @@
             <div class="col-12">
                 <div class="card card-table">
                     <div class="card-body">
-                        {{ render_list('netbs.secure.users', 'netbs', {username: username}) }}
+                        {{ render_list('netbs.secure.users', 'ajax', {username: username}) }}
                     </div>
                 </div>
             </div>
